# stratified-models

./: .coveragerc  .flake8  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  tests.yml
examples/: heart.py
stratified_models/: __init__.py  estimator.py  linear_operator.py  losses.py  models.py  problem.py  quadratic.py  regularizers.py  scalar_function.py
stratified_models/admm/: admm.py  losses.py  regularizers.py
stratified_models/admm/tests/: test_admm.py
stratified_models/examples/: house.py
stratified_models/fitters/: admm_fitter.py  admm_fitter2.py  cg_fitter.py  cvxpy_fitter.py  direct_fitter.py  fitter.py  hyperparameters_tuning.py  protocols.py  quadratic_fitter.py
stratified_models/fitters/test/: test_admm_fitter.py  test_all_fitters.py  test_all_fitters_classification.py
stratified_models/regularization_graph/: cartesian_product.py  circular_graph.py  networkx_graph.py  regularization_graph.py
stratified_models/regularization_graph/tests/: test_cartesian_product.py
stratified_models/tests/: data_generators.py  linear_operator_test.py  quadratic_test.py  test_estimator.py  test_models.py
stratified_models/utils/: dataframe_utils.py  flatten_nest.py  networkx_utils.py
stratified_models/utils/tests/: test_flatten_nest.py  test_networkx_utils.py
