[tool.poetry]
name = "stratified-models"
version = "0.1.0"
authors = ["Tom Shlomo <tomshlomo@gmail.com>"]
readme = "README.md"
packages = [{include = "stratified_models"}]
description = "A python package for training stratified machine learning models with laplacian regularization"
license = "MIT"
homepage = "https://github.com/tomshlomo/stratified-models"
repository = "https://github.com/tomshlomo/stratified-models"
keywords = ["startification", "laplacian regularization", "machine learning"]


[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
coverage = {version = "^7.0.1", extras = ["toml"]}
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-import-order = "^0.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["stratified_models", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["stratified_models"]

[tool.coverage.report]
show_missing = true
fail_under = 100
